--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,16 @@ blog/migrations/__pycache__/0001_initial.cpython-39.pyc
 django_ML/__pycache__/settings.cpython-39.pyc
 django_ML/__pycache__/urls.cpython-39.pyc
 
+media/default.jpg
+media/profile_pics/imagea.png
+media/profile_pics/images.jpeg
+media/profile_pics/inde22x.jpeg
+media/profile_pics/UNA_MIRADA_UNICA_Imagina_con_jungkook_eFOc6P7.jpeg
+users/__pycache__/forms.cpython-39.pyc
+users/__pycache__/models.cpython-39.pyc
+users/__pycache__/views.cpython-39.pyc
+django_ML/__pycache__/settings.cpython-39.pyc
+django_ML/__pycache__/urls.cpython-39.pyc
+blog/__pycache__/urls.cpython-39.pyc
+blog/__pycache__/views.cpython-39.pyc
+db.sqlite3
